cluster/apps/media/jellyseer/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jellyseer-ingress
  namespace: media
  annotations:
    hajimari.io/icon: material-symbols:screen-search-desktop-rounded
    hajimari.io/enable: true
    hajimari.io/appName: "Jellyseer"
    hajimari.io/group: "Media"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: traefik
  rules:
  - host: jellyseer.${SECRET_LOCAL_DOMAIN}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: jellyseerr
            port:
              number: 8080
  tls:
  - hosts: 
    - jellyseer.${SECRET_LOCAL_DOMAIN}
    secretName: jellyseer-ingress-certs
